<resources>
    <string name="app_name">Radia</string>
    <string name="ok">OK azertyui</string>
    <string name="ok2">OK wxcvbn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Login</string>
    <string name="Return">return</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">submit</string>
    <string name="detele">Detele</string>
</resources>